# ncaa-player-pool

./: .gitignore  README.md  pyproject.toml  update.sh
.devcontainer/: devcontainer.json
data/: players.csv  players_names.json  team_names.json  teams.json
data/prediction/: ncaa_statistics_2002-03.csv  ncaa_statistics_2003-04.csv  ncaa_statistics_2004-05.csv  ncaa_statistics_2005-06.csv  ncaa_statistics_2006-07.csv  ncaa_statistics_2007-08.csv  ncaa_statistics_2008-09.csv  ncaa_statistics_2009-10.csv  ncaa_statistics_2011-12.csv  ncaa_statistics_2012-13.csv  ncaa_statistics_2013-14.csv  ncaa_statistics_2014-15.csv  ncaa_statistics_2015-16.csv  ncaa_statistics_2016-17.csv  ncaa_statistics_2017-18.csv  ncaa_statistics_2018-19.csv  ncaa_statistics_2020-21.csv  ncaa_statistics_2021-22.csv  ncaa_statistics_2022-23.csv  ncaa_statistics_2023-24.csv  ncaa_statistics_champ_2011-12.csv  ncaa_statistics_champ_2012-13.csv  ncaa_statistics_champ_2013-14.csv  ncaa_statistics_champ_2014-15.csv  ncaa_statistics_champ_2015-16.csv  ncaa_statistics_champ_2016-17.csv  ncaa_statistics_champ_2017-18.csv  ncaa_statistics_champ_2018-19.csv  ncaa_statistics_champ_2020-21.csv  ncaa_statistics_champ_2021-22.csv  ncaa_statistics_champ_2022-23.csv  ncaa_statistics_champ_2023-24.csv
data/prediction/archive/: 538 Ratings.csv
data/prediction/xlsx/: NCAA Statistics (2002-03).xlsx  NCAA Statistics (2003-04).xlsx  NCAA Statistics (2004-05).xlsx  (+29 more)
ncaa_player_pool/: app.py  data-work.ipynb  hank_gathers.py  player_stats.py  requirements.txt  squads.json  ui.py
ncaa_player_pool/.chalice/: config.json  policy-prod.json  role-policy-prod.json
ncaa_player_pool/chalicelib/: bo_kimble.py  hank_gathers.py  player_stats.py  squads.json  ui.py
test/: index.html  table.html  table.md
(+1 files in other folders)
