[tool.poetry]
name = "ncaa_player_pool"
version = "0.1.0"
description = "'player point total collector'"
authors = ["Brian Hopenwasser <Brian.Hopenwasser@lfg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.6.4"
tabulate = "^0.9.0"
tzlocal = "^5.2"
chalice = "^1.31.0"
boto3 = "^1.34.79"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
xlsx2csv = "^0.8.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
buildSquad = "ncaa_player_pool.hank_gathers:cli"